# pyvvcore

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
pyvvcore/: core.py  ttslib.py
