[metadata]
name = pyvvcore
version = 0.0.1
description = Python Wrapper of VOICEVOX Core
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = takana-v
url = https://github.com/takana-v/pyvvcore
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:

[options.extras_require]
dev =
    pysen >= 0.10.1
    black >= 22.1.0
    flake8 >= 4.0.1
    isort >= 5.10.1
    mypy >= 0.941
    sphinx >= 4.4.0
    sphinx-rtd-theme >= 1.0.0